force-app/main/default/objects/Customer_Activity__c/Customer_Activity__c.object-meta.xml
<CustomObject>
    <label>Customer Activity</label>
    <nameField>
        <label>Customer Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>