force-app/main/default/objects/Customer_Activity__c/fields/Charging_Information__c.field-meta.xml
<CustomField>
    <fullName>Charging_Information__c</fullName>
    <label>Charging Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>