force-app/main/default/objects/Customer_Activity__c/fields/Contract_Option__c.field-meta.xml
<CustomField>
    <fullName>Contract_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Option</label>
    <referenceTo>Contract_Option__c</referenceTo>
    <relationshipLabel>Customer Activities</relationshipLabel>
    <relationshipName>Customer_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>