force-app/main/default/objects/Customer_Activity__c/fields/Customer_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Customer Activities</relationshipLabel>
    <relationshipName>Customer_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>