force-app/main/default/objects/Customer_Activity__c/fields/Demo_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Demo_Feedback__c</fullName>
    <label>Demo Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>