force-app/main/default/objects/Customer_Activity__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>