force-app/main/default/objects/Customer_Activity__c/fields/General_Update__c.field-meta.xml
<CustomField>
    <fullName>General_Update__c</fullName>
    <label>General Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>