force-app/main/default/objects/Customer_Activity__c/fields/Grant_Information__c.field-meta.xml
<CustomField>
    <fullName>Grant_Information__c</fullName>
    <label>Grant Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>