force-app/main/default/objects/Customer_Activity__c/fields/Meeting_Context__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Context__c</fullName>
    <label>Meeting Context</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>