force-app/main/default/objects/Customer_Activity__c/fields/Product_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Product_Feedback__c</fullName>
    <label>Product Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>