force-app/main/default/objects/Customer_Activity__c/recordTypes/CNG_Demo.recordType-meta.xml
<RecordType>
    <fullName>CNG_Demo</fullName>
    <active>true</active>
    <label>CNG Demo</label>
</RecordType>