force-app/main/default/objects/Customer_Activity__c/recordTypes/Diesel_Demo.recordType-meta.xml
<RecordType>
    <fullName>Diesel_Demo</fullName>
    <active>true</active>
    <label>Diesel Demo</label>
</RecordType>