force-app/main/default/objects/Customer_Activity__c/recordTypes/EBUS_Demo.recordType-meta.xml
<RecordType>
    <fullName>EBUS_Demo</fullName>
    <active>true</active>
    <label>EBUS Demo</label>
</RecordType>