force-app/main/default/objects/Customer_Activity__c/recordTypes/Hybrid_Demo.recordType-meta.xml
<RecordType>
    <fullName>Hybrid_Demo</fullName>
    <active>true</active>
    <label>Hybrid Demo</label>
</RecordType>