force-app/main/default/objects/Customer_Activity__c/recordTypes/Non_Gillig.recordType-meta.xml
<RecordType>
    <fullName>Non_Gillig</fullName>
    <active>true</active>
    <label>Non-Gillig</label>
</RecordType>