force-app/main/default/objects/Customer_Activity__c/recordTypes/Trade_Show.recordType-meta.xml
<RecordType>
    <fullName>Trade_Show</fullName>
    <active>true</active>
    <label>Trade Show</label>
</RecordType>