force-app/main/default/objects/Customer_Activity__c/recordTypes/Virtual_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Meeting</fullName>
    <active>true</active>
    <label>Virtual Meeting</label>
</RecordType>